[package]
name = "svix-ksuid"
version = "0.5.2"
authors = ["Svix Inc. <oss@svix.com>"]
edition = "2021"
description="A pure Rust and fully tested KSUID implementation"
repository="https://github.com/svix/rust-ksuid"
readme="README.md"
license="MIT"
keywords=["ksuid", "uuid", "svix"]

[badges]
maintenance = {status="actively-developed"}

[dependencies]
base-encode = "^0.3.1"
byteorder = "^1.4.3"
getrandom = "0.2.4"
chrono = "^0.4.19"

[dev-dependencies]
serde = { version = "^1.0.133", features = ["derive"] }
serde_json = "^1.0.74"
