[package]
name = "svix-ksuid"
version = "0.6.0"
authors = ["Svix Inc. <oss@svix.com>"]
edition = "2021"
description="A pure Rust and fully tested KSUID implementation"
homepage="https://www.svix.com"
repository="https://github.com/svix/rust-ksuid"
readme="README.md"
license="MIT"
keywords=["ksuid", "uuid", "svix", "segment"]
categories = ["data-structures", "concurrency", "database", "encoding"]

[badges]
maintenance = {status="actively-developed"}

[dependencies]
base-encode = "^0.3.1"
byteorder = "^1.4.3"
getrandom = "0.2.4"
time = "0.3.7"

[dev-dependencies]
serde = { version = "^1.0.133", features = ["derive"] }
serde_json = "^1.0.74"
